// Copyright 2016 Patrick Moor <patrick@moor.ws>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// To update: $ protoc --java_out=src/main/java src/main/gletscher.proto

syntax = "proto3";

package ws.moor.gletscher.proto;

message PersistedBlock {
  bytes signature = 1;
  uint32 original_size = 2;
}

message FileEntry {
  string name = 1;
  uint64 last_modified_millis = 2;
  repeated PersistedBlock block = 3;
}

message ChildDirectoryEntry {
  string name = 1;
  PersistedBlock block = 2;
}

message SymLinkEntry {
  string name = 1;
  string target = 2;
}

message DirectoryEntry {
  oneof type {
    FileEntry file = 1;
    ChildDirectoryEntry directory = 2;
    SymLinkEntry symlink = 3;
  }
}

message Directory {
  repeated DirectoryEntry entry = 1;
}

message BackupRecord {
  PersistedBlock rootDirectory = 1;
  uint64 creation_time_millis = 2;
}
